# shadow-index

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  config.toml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
docker/grafana/provisioning/dashboards/: dashboard.yml  shadow-index.json
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  SSOT.md
examples/: schema_init.rs  writer_demo.rs
frontend/: index.html
scripts/: check_monitoring.sh  deploy.sh  mock_api.py  mock_metrics_server.py  verify_metrics.sh
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  state.rs
src/db/: migrations.rs  mod.rs  models.rs  schema.sql  writer.rs
src/exex/: buffer.rs  mod.rs
src/transform/: mod.rs  state.rs
src/utils/: cursor.rs  mod.rs
tests/: benchmark.rs
tests/helpers/: mod.rs
