[package]
name = "shadow-index"
version = "0.1.0"
edition = "2021"
default-run = "shadow-index"

[dependencies]
# --- Async / Runtime ---
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Database & Config ---
clickhouse = { version = "0.11", features = ["tls", "time", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
url = "2.5"
hex = "0.4"

# --- Ethereum Primitives ---
# Using versions that match Reth's internal dependencies
alloy-primitives = "1.5"
alloy-consensus = "1.6"
revm = "34"
revm-database = "10"

# --- Reth (Using main branch) ---
reth = { git = "https://github.com/paradigmxyz/reth", branch = "main", features = ["jemalloc"] }
reth-exex = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-db = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }

[dev-dependencies]
testcontainers = "0.15"
serial_test = "3.0"

[lib]
name = "shadow_index"
path = "src/lib.rs"

[[bin]]
name = "shadow-index"
path = "src/main.rs"
